fix: init frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,22 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es6"],
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "lib": ["es6", "dom", "dom.iterable", "esnext"],
     "noImplicitAny": true,
     "removeComments": true,
-    "resolveJsonModule": true,
     "sourceMap": true,
+    "target": "es5",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "es6"
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules"],
   "files": ["./hardhat.config.ts"],
