--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -3,6 +3,8 @@ extends:
   - "plugin:@typescript-eslint/eslint-recommended"
   - "plugin:@typescript-eslint/recommended"
   - "prettier"
+  - "react-app"
+  - "react-app/jest"
 parser: "@typescript-eslint/parser"
 parserOptions:
   project: "tsconfig.json"
@@ -10,10 +12,6 @@ plugins:
   - "@typescript-eslint"
 root: true
 rules:
-  "@typescript-eslint/no-floating-promises":
-    - error
-    - ignoreIIFE: true
-      ignoreVoid: true
   "@typescript-eslint/no-inferrable-types": "off"
   "@typescript-eslint/no-unused-vars":
     - error
