--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,19 @@ yarn-debug.log*
 yarn-error.log*
 
 yarn.lock
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
