--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@prb/solidity-template",
+  "name": "@stealthvoting/implementation",
   "description": "Template for writing Solidity smart contracts",
   "version": "1.0.0",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://github.com/paulrberg"
+    "name": "Team NPR",
+    "url": "https://github.com/StealthVoting/implementation"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
@@ -17,13 +17,19 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.5.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "chai": "^4.3.6",
@@ -45,6 +51,9 @@
     "pinst": "^3.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-dev.21",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "solhint": "^3.3.7",
@@ -53,7 +62,8 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
   },
   "files": [
     "/contracts"
@@ -70,6 +80,10 @@
     "access": "public"
   },
   "scripts": {
+    "frontend:start": "react-scripts start",
+    "frontend:build": "react-scripts build",
+    "frontend:test": "react-scripts test",
+    "frontend:eject": "react-scripts eject",
     "clean": "shx rm -rf ./artifacts ./cache ./coverage ./src/types ./coverage.json",
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
@@ -85,5 +99,20 @@
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "test": "hardhat test",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "dependencies": {
+    "postcss-normalize": "^10.0.1"
   }
 }
