--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stealthvoting/implementation",
-  "description": "Template for writing Solidity smart contracts",
+  "description": "Implementation for Stealth Voting using Hardware Wallets",
   "version": "1.0.0",
   "author": {
     "name": "Team NPR",
@@ -17,9 +17,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@openzeppelin/contracts": "^4.6.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
@@ -42,7 +40,7 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.4",
     "fs-extra": "^10.1.0",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.9.6",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
@@ -51,9 +49,6 @@
     "pinst": "^3.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-dev.21",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "solhint": "^3.3.7",
@@ -62,8 +57,7 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.6.4"
   },
   "files": [
     "/contracts"
@@ -113,6 +107,17 @@
     ]
   },
   "dependencies": {
-    "postcss-normalize": "^10.0.1"
+    "@chakra-ui/react": "^2.1.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^6.3.3",
+    "postcss-normalize": "^10.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   }
 }
