--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/elliptic": "^6.4.14",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.1",
     "@types/mocha": "^9.1.1",
@@ -113,6 +114,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "elliptic": "^6.5.4",
     "framer-motion": "^6.3.3",
     "postcss-normalize": "^10.0.1",
     "react": "^18.1.0",
