--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "postcss-normalize": "^10.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
