--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bn.js": "^5.2.1",
     "elliptic": "^6.5.4",
     "framer-motion": "^6.3.3",
     "postcss-normalize": "^10.0.1",
@@ -123,6 +124,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3-utils": "^1.7.3"
   }
 }
