--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
     "coverage": "yarn typechain && hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && yarn typechain",
-    "deploy": "hardhat deploy:Greeter",
+    "deploy": "hardhat deploy:BlindVoting",
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
@@ -118,6 +118,7 @@
     "bn.js": "^5.2.1",
     "elliptic": "^6.5.4",
     "framer-motion": "^6.3.3",
+    "get-random-values": "^1.2.2",
     "postcss-normalize": "^10.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
