--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -13,7 +13,4 @@ plugins:
 root: true
 rules:
   "@typescript-eslint/no-inferrable-types": "off"
-  "@typescript-eslint/no-unused-vars":
-    - error
-    - argsIgnorePattern: "_"
-      varsIgnorePattern: "_"
+  "@typescript-eslint/no-unused-vars": "off"
