--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
-    "postinstall": "husky install",
+    "postinstall": "patch-package && husky install",
     "postpublish": "pinst --enable",
     "prepublishOnly": "pinst --disable",
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
@@ -112,20 +112,32 @@
     "@chakra-ui/react": "^2.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "bn.js": "^5.2.1",
     "elliptic": "^6.5.4",
     "framer-motion": "^6.3.3",
     "get-random-values": "^1.2.2",
+    "js-sha1": "^0.6.0",
+    "patch-package": "^6.4.7",
     "postcss-normalize": "^10.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4",
     "web3-utils": "^1.7.3"
+  },
+  "resolutions": {
+    "cipher-base@1.0.4": "patch:cipher-base@npm:1.0.4#.yarn/patches/cipher-base-npm-1.0.4-2e98b97140.patch",
+    "assert@2.0.0": "patch:assert@npm:2.0.0#.yarn/patches/assert-npm-2.0.0-ef73bc19f5.patch"
   }
 }
